Fixed messiness on mobile site

--- a/src/resources/styles/responsive.scss
+++ b/src/resources/styles/responsive.scss
@@ -1,25 +1,30 @@
 $bounceLoaderSizeMobile: 20px;
 
 body.has-navbar-fixed-top {
-    padding-top: 7.25rem !important;
+	padding-top: 7.25rem !important;
 }
 
-.wocCover{
-	@media only screen and (max-width: 768px)	{
+.wocCover {
+	@media only screen and (max-width: 768px) {
 		width: 60%;
 		max-width: 300px;
 	}
-	@media only screen and (min-width: 769px) and(max-width: 1023px)	{
+	@media only screen and (min-width: 769px) and(max-width: 1023px) {
 		width: 100%;
 	}
-	@media only screen and (min-width: 1024px) and(max-width: 1215px)	{
+	@media only screen and (min-width: 1024px) and(max-width: 1215px) {
 		width: 100%;
 	}
-	@media only screen and (min-width: 1216px){
+	@media only screen and (min-width: 1216px) {
 		width: 100%;
 	}
 }
 
 @media only screen and (max-width: 768px) {
-	
+	.socialMediaBar {
+		flex-direction: column !important;
+	}
+	.socialMediaItem {
+		margin: 0.4rem 0 0.4rem !important;
+	}
 }
